syntax = "proto3";

option csharp_namespace = "Vasconlabs.Aeolus.Domain.Contracts.V1";

package aeolus.v1;

message RawMessage {
  bytes data = 1;
}

message DeleteRequest { string key = 1; }
message DeleteResponse { bool ok = 1; }

message TTLRequest { string key = 1; }
message TTLResponse { int64 ttl_seconds = 1; bool exists = 2; }

message FlushAllRequest {}
message FlushAllResponse { bool ok = 1; }