syntax = "proto3";

option csharp_namespace = "Vasconlabs.Aeolus.Domain.Contracts.V1";

package aeolus.v1;

import "cache-messages-v1.proto";

service AeolusCacheGrpcService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc TTL(TTLRequest) returns (TTLResponse);
  rpc FlushAll(FlushAllRequest) returns (FlushAllResponse);
}